--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-debugbar": "^2.3",
         "laravelcollective/html": "^5.3",
-        "myclabs/php-enum": "^1.5"
+        "myclabs/php-enum": "^1.5",
+        "themsaid/laravel-mail-preview": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
